@@ -931,23 +931,23 @@ class CUser extends CZBXAPI {
 			' WHERE ug.userid='.$userInfo['userid'].
 				' AND g.usrgrpid=ug.usrgrpid'
 		));
-		if (!zbx_empty($dbAccess['gui_access'])) {
-			$guiAccess = $dbAccess['gui_access'];
-		}
-		else {
+		if (zbx_empty($dbAccess['gui_access'])) {
 			$guiAccess = GROUP_GUI_ACCESS_SYSTEM;
 		}
+		else {
+			$guiAccess = $dbAccess['gui_access'];
+		}
 
+		$config = select_config();
+		$authType = $config['authentication_type'];
 		switch ($guiAccess) {
 			case GROUP_GUI_ACCESS_INTERNAL:
-				$authType = ZBX_AUTH_INTERNAL;
+				$authType = ($authType == ZBX_AUTH_HTTP) ? ZBX_AUTH_HTTP : ZBX_AUTH_INTERNAL;
 				break;
 			case GROUP_GUI_ACCESS_DISABLED:
 				/* fall through */
 			case GROUP_GUI_ACCESS_SYSTEM:
-				$config = select_config();
-				$authType = $config['authentication_type'];
-				break;
+				/* fall through */
 		}
 
 		try {
